[package]
name = "planck_ecs_bundle"
version = "1.0.0"
authors = ["Joël Lupien (Jojolepro) <jojolepro@jojolepro.com>"]
edition = "2018"
description = "Adds bundles to planck_ecs."
keywords = ["game", "ecs"]
categories = ["game-engines"]
license = "Apache-2.0"
exclude = ["doc"]
repository = "https://github.com/jojolepro/planck_ecs_bundle/"

[dependencies]
world_dispatcher = "1.2.2"
